syntax = "proto3";

package hr.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";

// AbsenceType represents a configurable type of absence
message AbsenceType {
  optional string id = 1 [json_name = "id"];
  optional uint32 tenant_id = 2 [json_name = "tenantId"];
  optional string name = 3 [json_name = "name"];
  optional string description = 4 [json_name = "description"];
  optional string color = 5 [json_name = "color"];
  optional string icon = 6 [json_name = "icon"];
  optional bool deducts_from_allowance = 7 [json_name = "deductsFromAllowance"];
  optional bool requires_approval = 8 [json_name = "requiresApproval"];
  optional bool is_active = 9 [json_name = "isActive"];
  optional int32 sort_order = 10 [json_name = "sortOrder"];
  google.protobuf.Struct metadata = 11 [json_name = "metadata"];

  optional google.protobuf.Timestamp created_at = 20 [json_name = "createdAt"];
  optional google.protobuf.Timestamp updated_at = 21 [json_name = "updatedAt"];
  optional uint32 created_by = 22 [json_name = "createdBy"];
  optional uint32 updated_by = 23 [json_name = "updatedBy"];
}

message CreateAbsenceTypeRequest {
  optional uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];

  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255,
    (google.api.field_behavior) = REQUIRED
  ];

  optional string description = 3 [json_name = "description"];
  optional string color = 4 [json_name = "color"];
  optional string icon = 5 [json_name = "icon"];
  optional bool deducts_from_allowance = 6 [json_name = "deductsFromAllowance"];
  optional bool requires_approval = 7 [json_name = "requiresApproval"];
  optional bool is_active = 8 [json_name = "isActive"];
  optional int32 sort_order = 9 [json_name = "sortOrder"];
  google.protobuf.Struct metadata = 10 [json_name = "metadata"];
}

message CreateAbsenceTypeResponse {
  AbsenceType absence_type = 1 [json_name = "absenceType"];
}

message GetAbsenceTypeRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetAbsenceTypeResponse {
  AbsenceType absence_type = 1 [json_name = "absenceType"];
}

message ListAbsenceTypesRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional int32 page = 2 [json_name = "page"];
  optional int32 page_size = 3 [json_name = "pageSize"];
  optional bool no_paging = 4 [json_name = "noPaging"];
  optional string query = 5 [json_name = "query"];
}

message ListAbsenceTypesResponse {
  repeated AbsenceType items = 1 [json_name = "items"];
  optional int32 total = 2 [json_name = "total"];
}

message UpdateAbsenceTypeRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional AbsenceType data = 2 [json_name = "data"];
  google.protobuf.FieldMask update_mask = 3 [json_name = "updateMask"];
}

message UpdateAbsenceTypeResponse {
  AbsenceType absence_type = 1 [json_name = "absenceType"];
}

message DeleteAbsenceTypeRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

// HrAbsenceTypeService manages absence types
service HrAbsenceTypeService {
  rpc CreateAbsenceType(CreateAbsenceTypeRequest) returns (CreateAbsenceTypeResponse) {
    option (google.api.http) = {
      post: "/v1/absence-types"
      body: "*"
    };
  }

  rpc GetAbsenceType(GetAbsenceTypeRequest) returns (GetAbsenceTypeResponse) {
    option (google.api.http) = {
      get: "/v1/absence-types/{id}"
    };
  }

  rpc ListAbsenceTypes(ListAbsenceTypesRequest) returns (ListAbsenceTypesResponse) {
    option (google.api.http) = {
      get: "/v1/absence-types"
    };
  }

  rpc UpdateAbsenceType(UpdateAbsenceTypeRequest) returns (UpdateAbsenceTypeResponse) {
    option (google.api.http) = {
      put: "/v1/absence-types/{id}"
      body: "*"
    };
  }

  rpc DeleteAbsenceType(DeleteAbsenceTypeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/absence-types/{id}"
    };
  }
}
