syntax = "proto3";

package hr.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

// LeaveAllowance represents a user's leave allowance for a specific type and year
message LeaveAllowance {
  optional string id = 1 [json_name = "id"];
  optional uint32 tenant_id = 2 [json_name = "tenantId"];
  optional uint32 user_id = 3 [json_name = "userId"];
  optional string absence_type_id = 4 [json_name = "absenceTypeId"];
  optional int32 year = 5 [json_name = "year"];
  optional double total_days = 6 [json_name = "totalDays"];
  optional double used_days = 7 [json_name = "usedDays"];
  optional double carried_over = 8 [json_name = "carriedOver"];
  optional string notes = 9 [json_name = "notes"];

  // Denormalized for display
  optional string absence_type_name = 30 [json_name = "absenceTypeName"];
  optional string user_name = 31 [json_name = "userName"];

  optional google.protobuf.Timestamp created_at = 20 [json_name = "createdAt"];
  optional google.protobuf.Timestamp updated_at = 21 [json_name = "updatedAt"];
  optional uint32 created_by = 22 [json_name = "createdBy"];
  optional uint32 updated_by = 23 [json_name = "updatedBy"];
}

message CreateAllowanceRequest {
  optional uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];

  optional uint32 user_id = 2 [
    json_name = "userId",
    (google.api.field_behavior) = REQUIRED
  ];

  optional string absence_type_id = 3 [
    json_name = "absenceTypeId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional int32 year = 4 [
    json_name = "year",
    (google.api.field_behavior) = REQUIRED
  ];

  optional double total_days = 5 [
    json_name = "totalDays",
    (google.api.field_behavior) = REQUIRED
  ];

  optional double carried_over = 6 [json_name = "carriedOver"];
  optional string notes = 7 [json_name = "notes"];
  optional string user_name = 8 [json_name = "userName"];
}

message CreateAllowanceResponse {
  LeaveAllowance allowance = 1 [json_name = "allowance"];
}

message GetAllowanceRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetAllowanceResponse {
  LeaveAllowance allowance = 1 [json_name = "allowance"];
}

message ListAllowancesRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional int32 page = 2 [json_name = "page"];
  optional int32 page_size = 3 [json_name = "pageSize"];
  optional bool no_paging = 4 [json_name = "noPaging"];

  // Filters
  optional uint32 user_id = 10 [json_name = "userId"];
  optional int32 year = 11 [json_name = "year"];
  optional string absence_type_id = 12 [json_name = "absenceTypeId"];
}

message ListAllowancesResponse {
  repeated LeaveAllowance items = 1 [json_name = "items"];
  optional int32 total = 2 [json_name = "total"];
}

message UpdateAllowanceRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional LeaveAllowance data = 2 [json_name = "data"];
  google.protobuf.FieldMask update_mask = 3 [json_name = "updateMask"];
}

message UpdateAllowanceResponse {
  LeaveAllowance allowance = 1 [json_name = "allowance"];
}

message DeleteAllowanceRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

// BalanceEntry represents balance for a single absence type
message BalanceEntry {
  string absence_type_id = 1 [json_name = "absenceTypeId"];
  string absence_type_name = 2 [json_name = "absenceTypeName"];
  string color = 3 [json_name = "color"];
  double total_days = 4 [json_name = "totalDays"];
  double used_days = 5 [json_name = "usedDays"];
  double carried_over = 6 [json_name = "carriedOver"];
  double remaining_days = 7 [json_name = "remainingDays"];
}

message GetUserBalanceRequest {
  uint32 user_id = 1 [
    json_name = "userId",
    (google.api.field_behavior) = REQUIRED
  ];
  optional int32 year = 2 [json_name = "year"];
}

message GetUserBalanceResponse {
  uint32 user_id = 1 [json_name = "userId"];
  int32 year = 2 [json_name = "year"];
  repeated BalanceEntry entries = 3 [json_name = "entries"];
}

// HrAllowanceService manages leave allowances
service HrAllowanceService {
  rpc CreateAllowance(CreateAllowanceRequest) returns (CreateAllowanceResponse) {
    option (google.api.http) = {
      post: "/v1/allowances"
      body: "*"
    };
  }

  rpc GetAllowance(GetAllowanceRequest) returns (GetAllowanceResponse) {
    option (google.api.http) = {
      get: "/v1/allowances/{id}"
    };
  }

  rpc ListAllowances(ListAllowancesRequest) returns (ListAllowancesResponse) {
    option (google.api.http) = {
      get: "/v1/allowances"
    };
  }

  rpc UpdateAllowance(UpdateAllowanceRequest) returns (UpdateAllowanceResponse) {
    option (google.api.http) = {
      put: "/v1/allowances/{id}"
      body: "*"
    };
  }

  rpc DeleteAllowance(DeleteAllowanceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/allowances/{id}"
    };
  }

  rpc GetUserBalance(GetUserBalanceRequest) returns (GetUserBalanceResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/balance"
    };
  }
}
