syntax = "proto3";

package hr.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";

// LeaveRequestStatus represents the status of a leave request
enum LeaveRequestStatus {
  LEAVE_REQUEST_STATUS_UNSPECIFIED = 0;
  LEAVE_REQUEST_STATUS_PENDING = 1;
  LEAVE_REQUEST_STATUS_APPROVED = 2;
  LEAVE_REQUEST_STATUS_REJECTED = 3;
  LEAVE_REQUEST_STATUS_CANCELLED = 4;
}

// LeaveRequest represents a user's leave/absence request
message LeaveRequest {
  optional string id = 1 [json_name = "id"];
  optional uint32 tenant_id = 2 [json_name = "tenantId"];
  optional uint32 user_id = 3 [json_name = "userId"];
  optional string absence_type_id = 4 [json_name = "absenceTypeId"];
  optional google.protobuf.Timestamp start_date = 5 [json_name = "startDate"];
  optional google.protobuf.Timestamp end_date = 6 [json_name = "endDate"];
  optional double days = 7 [json_name = "days"];
  optional LeaveRequestStatus status = 8 [json_name = "status"];
  optional string reason = 9 [json_name = "reason"];
  optional string review_notes = 10 [json_name = "reviewNotes"];
  optional uint32 reviewed_by = 11 [json_name = "reviewedBy"];
  optional google.protobuf.Timestamp reviewed_at = 12 [json_name = "reviewedAt"];
  optional string notes = 13 [json_name = "notes"];
  google.protobuf.Struct metadata = 14 [json_name = "metadata"];

  // Denormalized fields for display
  optional string user_name = 30 [json_name = "userName"];
  optional string absence_type_name = 31 [json_name = "absenceTypeName"];
  optional string absence_type_color = 32 [json_name = "absenceTypeColor"];
  optional string reviewer_name = 33 [json_name = "reviewerName"];
  optional string org_unit_name = 34 [json_name = "orgUnitName"];

  optional google.protobuf.Timestamp created_at = 20 [json_name = "createdAt"];
  optional google.protobuf.Timestamp updated_at = 21 [json_name = "updatedAt"];
  optional uint32 created_by = 22 [json_name = "createdBy"];
  optional uint32 updated_by = 23 [json_name = "updatedBy"];
}

message CreateLeaveRequestRequest {
  optional uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];

  optional uint32 user_id = 2 [
    json_name = "userId",
    (google.api.field_behavior) = REQUIRED
  ];

  optional string absence_type_id = 3 [
    json_name = "absenceTypeId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional google.protobuf.Timestamp start_date = 4 [
    json_name = "startDate",
    (google.api.field_behavior) = REQUIRED
  ];

  optional google.protobuf.Timestamp end_date = 5 [
    json_name = "endDate",
    (google.api.field_behavior) = REQUIRED
  ];

  optional double days = 6 [json_name = "days"];
  optional string reason = 7 [json_name = "reason"];
  optional string notes = 8 [json_name = "notes"];
  google.protobuf.Struct metadata = 9 [json_name = "metadata"];
  optional string user_name = 10 [json_name = "userName"];
  optional string org_unit_name = 11 [json_name = "orgUnitName"];
}

message CreateLeaveRequestResponse {
  LeaveRequest leave_request = 1 [json_name = "leaveRequest"];
}

message GetLeaveRequestRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetLeaveRequestResponse {
  LeaveRequest leave_request = 1 [json_name = "leaveRequest"];
}

message ListLeaveRequestsRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional int32 page = 2 [json_name = "page"];
  optional int32 page_size = 3 [json_name = "pageSize"];
  optional bool no_paging = 4 [json_name = "noPaging"];
  optional string query = 5 [json_name = "query"];

  // Filters
  optional uint32 user_id = 10 [json_name = "userId"];
  optional string absence_type_id = 11 [json_name = "absenceTypeId"];
  optional LeaveRequestStatus status = 12 [json_name = "status"];
  optional string start_date = 13 [json_name = "startDate"];
  optional string end_date = 14 [json_name = "endDate"];
}

message ListLeaveRequestsResponse {
  repeated LeaveRequest items = 1 [json_name = "items"];
  optional int32 total = 2 [json_name = "total"];
}

message UpdateLeaveRequestRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional LeaveRequest data = 2 [json_name = "data"];
  google.protobuf.FieldMask update_mask = 3 [json_name = "updateMask"];
}

message UpdateLeaveRequestResponse {
  LeaveRequest leave_request = 1 [json_name = "leaveRequest"];
}

message DeleteLeaveRequestRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

// ApproveLeaveRequestRequest approves a pending leave request
message ApproveLeaveRequestRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  optional string review_notes = 2 [json_name = "reviewNotes"];
}

message ApproveLeaveRequestResponse {
  LeaveRequest leave_request = 1 [json_name = "leaveRequest"];
}

// RejectLeaveRequestRequest rejects a pending leave request
message RejectLeaveRequestRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  optional string review_notes = 2 [json_name = "reviewNotes"];
}

message RejectLeaveRequestResponse {
  LeaveRequest leave_request = 1 [json_name = "leaveRequest"];
}

// CancelLeaveRequestRequest cancels a leave request
message CancelLeaveRequestRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

message CancelLeaveRequestResponse {
  LeaveRequest leave_request = 1 [json_name = "leaveRequest"];
}

// CalendarEvent represents a leave request displayed on calendar
message CalendarEvent {
  string id = 1 [json_name = "id"];
  uint32 user_id = 2 [json_name = "userId"];
  string user_name = 3 [json_name = "userName"];
  string absence_type_id = 4 [json_name = "absenceTypeId"];
  string absence_type_name = 5 [json_name = "absenceTypeName"];
  string color = 6 [json_name = "color"];
  google.protobuf.Timestamp start_date = 7 [json_name = "startDate"];
  google.protobuf.Timestamp end_date = 8 [json_name = "endDate"];
  double days = 9 [json_name = "days"];
  LeaveRequestStatus status = 10 [json_name = "status"];
  string org_unit_name = 11 [json_name = "orgUnitName"];
}

message GetCalendarEventsRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional string start_date = 2 [json_name = "startDate"];
  optional string end_date = 3 [json_name = "endDate"];
  optional string org_unit_name = 4 [json_name = "orgUnitName"];
  optional uint32 user_id = 5 [json_name = "userId"];
}

message GetCalendarEventsResponse {
  repeated CalendarEvent events = 1 [json_name = "events"];
}

// HrLeaveService manages leave requests
service HrLeaveService {
  rpc CreateLeaveRequest(CreateLeaveRequestRequest) returns (CreateLeaveRequestResponse) {
    option (google.api.http) = {
      post: "/v1/leave-requests"
      body: "*"
    };
  }

  rpc GetLeaveRequest(GetLeaveRequestRequest) returns (GetLeaveRequestResponse) {
    option (google.api.http) = {
      get: "/v1/leave-requests/{id}"
    };
  }

  rpc ListLeaveRequests(ListLeaveRequestsRequest) returns (ListLeaveRequestsResponse) {
    option (google.api.http) = {
      get: "/v1/leave-requests"
    };
  }

  rpc UpdateLeaveRequest(UpdateLeaveRequestRequest) returns (UpdateLeaveRequestResponse) {
    option (google.api.http) = {
      put: "/v1/leave-requests/{id}"
      body: "*"
    };
  }

  rpc DeleteLeaveRequest(DeleteLeaveRequestRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/leave-requests/{id}"
    };
  }

  rpc ApproveLeaveRequest(ApproveLeaveRequestRequest) returns (ApproveLeaveRequestResponse) {
    option (google.api.http) = {
      post: "/v1/leave-requests/{id}/approve"
      body: "*"
    };
  }

  rpc RejectLeaveRequest(RejectLeaveRequestRequest) returns (RejectLeaveRequestResponse) {
    option (google.api.http) = {
      post: "/v1/leave-requests/{id}/reject"
      body: "*"
    };
  }

  rpc CancelLeaveRequest(CancelLeaveRequestRequest) returns (CancelLeaveRequestResponse) {
    option (google.api.http) = {
      post: "/v1/leave-requests/{id}/cancel"
      body: "*"
    };
  }

  rpc GetCalendarEvents(GetCalendarEventsRequest) returns (GetCalendarEventsResponse) {
    option (google.api.http) = {
      get: "/v1/calendar"
    };
  }
}
